# rules_pycross

./: internal_deps.bzl
docs/: rules.md
example/: BUILD.bazel  WORKSPACE  example_lock.bzl
examples/crossenv/tools/: BUILD.bazel
examples/pdm/: BUILD.bazel  WORKSPACE  example_lock.bzl  example_lock_rules_py.bzl  example_lock_rules_python.bzl  pyproject.toml
examples/pdm/deps_rules_py/: BUILD.bazel
examples/pdm/deps_rules_python/: BUILD.bazel
examples/pdm/rules_py_repro/: BUILD.bazel  main.py
examples/pdm/rules_python_repro/: BUILD.bazel
examples/pdm/tools/: BUILD.bazel
examples/poetry/: BUILD.bazel  WORKSPACE  example_lock.bzl
pycross/: BUILD.bazel  toolchain.bzl
pycross/private/: lock_file.bzl  pypi_requirements.bzl  requirements.in  requirements.txt  wheel_build.bzl
pycross/private/tools/: BUILD.bazel  bzl_lock_generator.py  lock_model.py  wheel_builder.py
pycross/private/tools/crossenv/: README.md
pycross/private/tools/crossenv/scripts/: site.py.tmpl  sys-patch.py.tmpl
