[project]
name = "rules_pycross_example_pdm"
version = "0.1"
description = "rules_pycross"
authors = []
dependencies = [
    "setuptools==59.2.0",
    "wheel==0.37.0",
    "grpclib>=0.4.6",
]
requires-python = "~=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
post_lock = "bazel run //:update_example_lock"
